// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Domain should call fetchGroup from mapDispatchToProps 1`] = `
Object {
  "payload": "Group Name",
  "type": "CreateGroup/ADD_GROUP_NAME",
}
`;

exports[`Domain should call goHome from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Domain should call goToNextStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-group/domain",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
